--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
             <artifactId>json</artifactId>
             <version>20230227</version>
         </dependency>
+
         <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
@@ -45,6 +46,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+            <dependency>
+                <groupId>com.googlecode.json-simple</groupId>
+                <artifactId>json-simple</artifactId>
+                <version>1.1.1</version>
+            </dependency>
 
     </dependencies>
 </project>
